# YetAnotherGitGui

./: .fallowrc.json  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TESTING.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.yolo/: root-setup.sh  user-setup.sh
e2e/: app.spec.ts  contrast-helper.ts  contrast-interactive-states.spec.ts  contrast-known-bugs.spec.ts  density-text-overflow.spec.ts  fixtures.ts  helpers.ts  repo-state-banner.spec.ts  tauri-mocks.ts  terminal.spec.ts  waitHelpers.ts  welcome-screen.spec.ts  worktrees.spec.ts
scripts/: check.sh  semantic-release.mjs  update-versions.mjs
src/: App.css  App.test.tsx  App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: crash_handler.rs  error.rs  lib.rs  logger.rs  main.rs  test_utils.rs  update_logger.rs
src-tauri/src/commands/: branches.rs  cleanup.rs  commit.rs  commits.rs  diff.rs  logging.rs  mod.rs  operations.rs  repository.rs  settings.rs  staging.rs  stash.rs  system.rs  terminal.rs  worktree.rs
src-tauri/src/git/: commit.rs  diff.rs  graph.rs  mod.rs  operations.rs  repository.rs  staging.rs  stash.rs  worktree.rs
src-tauri/src/state/: mod.rs
src-tauri/src/terminal/: mod.rs
src-tauri/tests/: branches.rs  cleanup.rs  commits.rs  diff.rs  graph.rs  operations.rs  repository.rs  staging.rs  stash.rs  worktree.rs
src-tauri/tests/common/: mod.rs
src/hooks/: useCleanupConfirm.ts  useCliArgs.test.ts  useCliArgs.ts  useCommandPaletteSearch.test.ts  useCommandPaletteSearch.ts  useContextMenu.ts  useFilteredListNav.test.ts  useFilteredListNav.ts  useKeyboardShortcuts.test.ts  useKeyboardShortcuts.ts  usePlatform.test.ts  usePlatform.ts  useRafPointerDrag.ts  useResizeObserver.ts  useUpdateCheck.test.tsx  useUpdateCheck.tsx
(+224 files in other folders)
