[package]
name = "yagg"
version = "1.4.1"
description = "Yet Another Git Gui - A Git GUI application"
authors = ["kd"]
edition = "2021"

[lib]
name = "yagg_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.10", features = [] }
tauri-plugin-cli = "2.4"
tauri-plugin-clipboard-manager = "2.3"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
git2 = { version = "0.20", features = ["vendored-openssl"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"

[dev-dependencies]
tempfile = "3.25"
